# image_scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: publishing.yml
image_scraper/: scraper.py
