[project]
name = "image-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "undetected-chromedriver>=3.5.5",
]
